[US-007] Update the product and index.html

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <body>
     <nav>
         <div class="nav-bar-component">
-            <img name="hamburger" id="hamburger" src="assest/hamburger.PNG" alt="Hamburger"/>
+            <img name="hamburger" id="hamburger" src="assest/hamburger.png" alt="Hamburger"/>
             <a name="home" id="home" ><b>HOME</b></a>
             <a name="shop" id="shop"><b>SHOP</b></a>
             <a name="magazine" id="magazine"><b>Magazine</b></a>
-            <img name="search" id="search" src="assest/search.PNG" alt="search"/>
+            <img name="search" id="search" src="assest/search.png" alt="search"/>
             <input name="searchBox" id="searchBox" type="text" placeholder="Search" />
-            <img name="addToCart" id="addToCart" src="assest/addToCart.PNG" alt="addToCart"/>
+            <img name="addToCart" id="addToCart" src="assest/addToCart.png" alt="addToCart"/>
             <a name="login" id="login"><b>LOGIN</b></a>
         </div>
     </nav>
